--- a/egui_node_graph/Cargo.toml
+++ b/egui_node_graph/Cargo.toml
@@ -6,7 +6,7 @@ repository = "https://github.com/setzer22/egui_node_graph"
 license = "MIT"
 version = "0.4.0"
 keywords = ["ui", "egui", "graph", "node"]
-authors = ["setzer22"]
+authors = ["setzer22", "Kamil Koczurek <koczurekk@gmail.com>"]
 edition = "2021"
 readme = "../README.md"
 workspace = ".."
