--- a/egui_node_graph_example/Cargo.toml
+++ b/egui_node_graph_example/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "egui_node_graph_example"
 version = "0.1.0"
-authors = ["setzer22"]
+authors = ["setzer22", "Kamil Koczurek <koczurekk@gmail.com>"]
 edition = "2021"
 rust-version = "1.56"
 
