--- a/egui-graph-edit-example/Cargo.toml
+++ b/egui-graph-edit-example/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "egui_node_graph_example"
+name = "egui-graph-edit-example"
 version = "0.1.0"
-authors = ["setzer22", "Kamil Koczurek <koczurekk@gmail.com>"]
+authors = ["Kamil Koczurek <koczurekk@gmail.com>", "setzer22"]
 edition = "2021"
 rust-version = "1.56"
 
@@ -10,13 +10,13 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 eframe = "0.29.1"
-egui_node_graph = { path = "../egui_node_graph" }
+egui-graph-edit = { path = "../egui-graph-edit" }
 anyhow = "1.0"
 serde = { version = "1.0", optional = true }
 
 [features]
 default = []
-persistence = ["serde", "egui_node_graph/persistence", "eframe/persistence"]
+persistence = ["serde", "egui-graph-edit/persistence", "eframe/persistence"]
 
 [profile.release]
 opt-level = 2 # fast and small wasm
