--- a/egui-graph-edit/Cargo.toml
+++ b/egui-graph-edit/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "egui_node_graph"
+name = "egui-graph-edit"
 description = "A helper library to create interactive node graphs using egui"
 homepage = "https://github.com/setzer22/egui_node_graph"
 repository = "https://github.com/setzer22/egui_node_graph"
 license = "MIT"
 version = "0.4.0"
 keywords = ["ui", "egui", "graph", "node"]
-authors = ["setzer22", "Kamil Koczurek <koczurekk@gmail.com>"]
+authors = ["Kamil Koczurek <koczurekk@gmail.com>", "setzer22"]
 edition = "2021"
 readme = "../README.md"
 workspace = ".."
